@@ -1,6 +1,8 @@
 Release 0.5.1 (in development)
 ==============================
 
+* Warn if a doctest extension block doesn't contain any code.
+
 * Fix the handling of ``:param:`` and ``:type:`` doc fields when
   they contain markup (especially cross-referencing roles).
 
